[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Sprites/BrickBall.piskel" type="Texture" id=1]
[ext_resource path="res://Szenen/Game/Ball/Ball.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 5.22282

[sub_resource type="Animation" id=2]
resource_name = "hit_leftright"
length = 0.2
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 2.5, -0.25, 0, 0.25, 0, 1.67113, -0.25, 0, 0.25, 0, 2.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2 )
}

[sub_resource type="Animation" id=3]
resource_name = "hit_topbot"
length = 0.2
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:scale:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 2.5, -0.25, 0, 0.25, 0, 1.6456, -0.25, 0, 0.25, 0, 2.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2 )
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4.37375, 3.6263 )

[node name="Ball" type="KinematicBody2D"]
scale = Vector2( 2.5, 2.5 )
collision_layer = 4
collision_mask = 25
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hit_leftright = SubResource( 2 )
anims/hit_topbot = SubResource( 3 )

[node name="AnimationChecker" type="Node2D" parent="."]

[node name="CollisionTopBot" type="Area2D" parent="AnimationChecker"]
collision_layer = 0
collision_mask = 25

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimationChecker/CollisionTopBot"]
position = Vector2( 0.132016, 6.1871 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AnimationChecker/CollisionTopBot"]
position = Vector2( -0.151144, -6.00957 )
shape = SubResource( 4 )

[node name="CollisionLeftRight" type="Area2D" parent="AnimationChecker"]
collision_layer = 0
collision_mask = 25

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimationChecker/CollisionLeftRight"]
position = Vector2( -8.46854, 0.419438 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AnimationChecker/CollisionLeftRight"]
position = Vector2( 7.97749, -0.0527101 )
shape = SubResource( 4 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="body_entered" from="AnimationChecker/CollisionTopBot" to="." method="_on_topbot_body_entered"]
[connection signal="body_entered" from="AnimationChecker/CollisionLeftRight" to="." method="_on_leftright_body_entered"]
